
syntax = "proto3";

package cpay.erc20;

service ERC20 {
    rpc CreateWallet(CreateWalletRequest) returns (CreateWalletReposnse) {}
}

message CreateWalletRequest {
    string userId = 1;
    string networkId=2;
    string coinId=3;
    string oprtaionStatus =4;
}

message CreateWalletReposnse {
    string oprtaionStatus =1;
    string walletAddress =2;
    string userId =3;
}